fix tooltip cut off

--- a/css/menupages.scss
+++ b/css/menupages.scss
@@ -26,21 +26,9 @@
   margin: 4px;
 }
 
-/* Create program */
-#create-program-container {
-  position: fixed;
-  padding-top: 10px;
-}
-
 #create-program-page-text,
 #create-program-list {
   width: 70%;
-}
-
-/* Factions and Faction (Single Faction page) */
-#factions-container {
-  position: fixed;
-  padding-top: 10px;
 }
 
 .faction-work-div {
